--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     border-radius: 50%;
     padding: 5px;
   ">
-    <img src="https://drive.google.com/uc?export=view&id=1RrJSL9HZg01dm5ozYTEiZGJmn6W0jbk9"
+    <img src="https://drive.google.com/file/d/1RrJSL9HZg01dm5ozYTEiZGJmn6W0jbk9/view?usp=sharing"
          alt="Trọng Nghĩa"
          width="200"
          height="200"
