--- a/index.html
+++ b/index.html
@@ -263,22 +263,24 @@
   <div id="mainContent">
     <h1>🌸 Đàm Trọng Nghĩa 🌸</h1>
     
-    
-    <div style="text-align: center; margin-top: 20px;">
+    <div style="text-align: center; margin: 20px 0;">
   <div style="
-    display: inline-block;
-    border: 6px solid;
-    border-image: linear-gradient(135deg, red, orange, yellow, green, cyan, blue, violet) 1;
+    width: 210px;
+    height: 210px;
     border-radius: 50%;
     padding: 5px;
+    background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet);
+    display: inline-block;
   ">
-    <img src="https://i.postimg.cc/90cW5ZgY/your-image.jpg"
-         alt="Trọng Nghĩa"
-         width="200"
-         height="200"
-         style="border-radius: 50%; object-fit: cover;">
+    <img src="https://i.postimg.cc/9FN8J4PD/retouch-2025072222563509.jpg" alt="Ảnh avatar" style="
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      object-fit: cover;
+      display: block;
+    ">
   </div>
-</div>
+    </div>
 
 
     <p>Dịch Vụ Uy Tín – Lên Đơn Rõ Ràng</p>
