--- a/index.html
+++ b/index.html
@@ -265,16 +265,16 @@
     
     <div style="text-align: center; margin: 20px 0;">
   <div style="
-    width: 210px;
-    height: 210px;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     padding: 5px;
-    background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet);
+    background: conic-gradient(red, orange, yellow, green, cyan, blue, violet, red);
     display: inline-block;
   ">
     <img src="https://i.postimg.cc/9FN8J4PD/retouch-2025072222563509.jpg" alt="Ảnh avatar" style="
-      width: 200px;
-      height: 200px;
+      width: 70px;
+      height: 70px;
       border-radius: 50%;
       object-fit: cover;
       display: block;
