--- a/index.html
+++ b/index.html
@@ -233,6 +233,25 @@
     }
 }
 
+@media screen and (orientation: landscape) {
+    #rotate-notice {
+        display: none;
+    }
+
+    body > * {
+        display: block;
+    }
+
+    .message,
+    #bubbles-text,
+    .text-container,
+    .hearts,
+    .flowers,
+    .bubbles {
+        display: block;
+    }
+}
+
         </style>
     </head>
     <body>
