--- a/index.html
+++ b/index.html
@@ -1,372 +1,314 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bubbles love ❤️</title>
-        <link rel="stylesheet" href="style.css">
-        <style>
-        *, *::before, *::after {
-  box-sizing: border-box;
-}
-.message,
-.text-bubble {
-  max-width: 90vw;
-  word-wrap: break-word;
-}
-
-            body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background: url('https://img.freepik.com/vector-gratis/tema-san-valentin-corazones-cielo-rosa_1308-38030.jpg?semt=ais_hybrid&w=740') no-repeat center center;
-    background-size: cover;
-    background-attachment: fixed;
-    font-family: 'Arial', sans-serif;
-    text-align: center;
-    overflow: hidden;
-    position: relative;
-}
-
-@keyframes gradientAnimation {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
-}
-
-.message {
-    background: rgba(255, 255, 255, 0.8);
-    padding: 25px;
-    border-radius: 15px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
-    font-size: 28px;
-    color: #d63384;
-    font-weight: bold;
-    margin-bottom: 25px;
-    transition: transform 0.3s ease;
-    animation: bounce 1s infinite;
-}
-
-@keyframes bounce {
-    0%, 100% { transform: translateY(0); }
-    50% { transform: translateY(-15px); }
-}
-
-.message:hover {
-    transform: scale(1.1);
-}
-
-.hearts {
-    position: absolute;
-    top: 20%;
-    left: 10%;
-    z-index: -1;
-    font-size: 50px;
-    color: #ff99b6;
-    animation: floatHearts 5s ease-in-out infinite;
-}
-
-@keyframes floatHearts {
-    0% { transform: translateY(0) scale(1); opacity: 1; }
-    50% { transform: translateY(-150px) scale(1.5); opacity: 0.5; }
-    100% { transform: translateY(0) scale(1); opacity: 1; }
-}
-
-.hearts:nth-child(2) { left: 25%; animation-duration: 6s; }
-.hearts:nth-child(3) { left: 40%; animation-duration: 7s; }
-.hearts:nth-child(4) { left: 60%; animation-duration: 8s; }
-.hearts:nth-child(5) { left: 75%; animation-duration: 9s; }
-
-.text-container {
-    position: absolute;
-    top: 0; left: 0; right: 0; bottom: 0;
-}
-
-.charming-text {
-    position: absolute;
-    font-size: 18px;
-    font-family: 'Cursive', sans-serif;
-    color: #d63384;
-    animation: fadeInText 6s ease-in-out infinite;
-    z-index: 1;
-    padding: 10px 20px;
-    border-radius: 25px;
-    background-color: rgba(255, 255, 255, 0.7);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    max-width: 80vw;
-    word-wrap: break-word;
-}
-
-.charming-text:nth-child(1) { top: 15%; left: 5%; text-align: left; animation-duration: 6s; }
-.charming-text:nth-child(2) { top: 25%; left: 5%; text-align: left; animation-duration: 7s; }
-.charming-text:nth-child(3) { top: 35%; left: 5%; text-align: left; animation-duration: 8s; }
-.charming-text:nth-child(4) { top: 15%; right: 5%; text-align: right; animation-duration: 6s; }
-.charming-text:nth-child(5) { top: 25%; right: 5%; text-align: right; animation-duration: 7s; }
-.charming-text:nth-child(6) { top: 35%; right: 5%; text-align: right; animation-duration: 8s; }
-
-@keyframes fadeInText {
-    0% { opacity: 0; }
-    50% { opacity: 0.5; transform: scale(1.2); }
-    100% { opacity: 1; transform: scale(1); }
-}
-
-.flowers {
-    position: absolute;
-    bottom: 10px;
-    animation: flowerAnimation 5s ease-in-out infinite;
-    font-size: 30px;
-}
-
-@keyframes flowerAnimation {
-    0% { transform: translateY(0); opacity: 0; }
-    50% { transform: translateY(-50px); opacity: 1; }
-    100% { transform: translateY(0); opacity: 0; }
-}
-
-.flowers:nth-child(1) { left: 10%; animation-duration: 6s; }
-.flowers:nth-child(2) { left: 30%; animation-duration: 7s; }
-.flowers:nth-child(3) { left: 50%; animation-duration: 8s; }
-.flowers:nth-child(4) { left: 70%; animation-duration: 9s; }
-.flowers:nth-child(5) { left: 90%; animation-duration: 10s; }
-
-.bubbles {
-    position: absolute;
-    bottom: 10px;
-    font-size: 25px;
-    color: #ff99b6;
-    animation: bubbleAnimation 7s ease-in-out infinite;
-}
-
-@keyframes bubbleAnimation {
-    0% { transform: translateY(0) scale(1); opacity: 0.8; }
-    50% { transform: translateY(-100px) scale(1.3); opacity: 0.4; }
-    100% { transform: translateY(0) scale(1); opacity: 0.8; }
-}
-
-.bubbles:nth-child(1) { left: 10%; animation-duration: 8s; }
-.bubbles:nth-child(2) { left: 30%; animation-duration: 9s; }
-.bubbles:nth-child(3) { left: 50%; animation-duration: 10s; }
-.bubbles:nth-child(4) { left: 70%; animation-duration: 11s; }
-.bubbles:nth-child(5) { left: 90%; animation-duration: 12s; }
-
-#bubbles-text {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    overflow: hidden;
-    z-index: 1;
-}
-
-.text-bubble {
-    position: absolute;
-    font-size: 18px;
-    font-family: 'Cursive', sans-serif;
-    color: #d63384;
-    background-color: rgba(255, 255, 255, 0.7);
-    padding: 10px 20px;
-    border-radius: 25px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    animation: floatText 8s ease-in-out forwards;
-    white-space: nowrap;
-}
-
-@keyframes floatText {
-    0% { opacity: 0; transform: scale(0.5) translateY(0px); }
-    50% { opacity: 1; transform: scale(1.2) translateY(-50px); }
-    100% { opacity: 0; transform: scale(1) translateY(-100px); }
-}
-
-@media (max-width: 768px) {
-    body {
-        background-size: 100% 100%;
-        background-position: center top;
-    }
-
-    .message { font-size: 24px; padding: 20px; }
-    .charming-text { font-size: 16px; padding: 8px 16px; }
-    .flowers { font-size: 25px; }
-    .bubbles { font-size: 20px; }
-}
-
-@media (max-width: 768px) {
-    body {
-        background-position: center top;
-        background-size: cover;
-    }
-}
-
-
-#rotate-notice {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(255, 240, 245, 0.95); /* nền hồng nhạt */
-    color: black; /* chữ màu đen */
-    font-size: 13px; /* cỡ chữ nhỏ */
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 20px;
-    border: 4px dashed #ff69b4; /* viền màu hồng cute */
-    box-shadow: 0 0 20px #ffb6c1;
-    border-radius: 25px;
-    text-shadow: 1px 1px #ffc0cb; /* viền chữ hồng nhạt */
-}
-
-@media screen and (orientation: portrait) {
-    #rotate-notice {
-        display: flex;
-    }
-
-    body > *:not(#rotate-notice) {
-        display: none !important;
-    }
-}
-
-@media screen and (orientation: landscape) {
-    #rotate-notice {
-        display: none;
-    }
-
-    body > * {
-        display: block;
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Bubbles love ❤️</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    *, *::before, *::after {
+      box-sizing: border-box;
     }
 
     .message,
-    #bubbles-text,
-    .text-container,
-    .hearts,
-    .flowers,
+    .text-bubble {
+      max-width: 90vw;
+      word-wrap: break-word;
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background: url('https://img.freepik.com/vector-gratis/tema-san-valentin-corazones-cielo-rosa_1308-38030.jpg?semt=ais_hybrid&w=740') no-repeat center center;
+      background-size: cover;
+      background-attachment: fixed;
+      font-family: 'Arial', sans-serif;
+      text-align: center;
+      overflow: hidden;
+      position: relative;
+    }
+
+    @keyframes gradientAnimation {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    .message {
+      background: rgba(255, 255, 255, 0.8);
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
+      font-size: 28px;
+      color: #d63384;
+      font-weight: bold;
+      margin-bottom: 25px;
+      transition: transform 0.3s ease;
+      animation: bounce 1s infinite;
+    }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-15px); }
+    }
+
+    .message:hover {
+      transform: scale(1.1);
+    }
+
+    .hearts {
+      position: absolute;
+      top: 20%;
+      left: 10%;
+      z-index: -1;
+      font-size: 50px;
+      color: #ff99b6;
+      animation: floatHearts 5s ease-in-out infinite;
+    }
+
+    @keyframes floatHearts {
+      0% { transform: translateY(0) scale(1); opacity: 1; }
+      50% { transform: translateY(-150px) scale(1.5); opacity: 0.5; }
+      100% { transform: translateY(0) scale(1); opacity: 1; }
+    }
+
+    .hearts:nth-child(2) { left: 25%; animation-duration: 6s; }
+    .hearts:nth-child(3) { left: 40%; animation-duration: 7s; }
+    .hearts:nth-child(4) { left: 60%; animation-duration: 8s; }
+    .hearts:nth-child(5) { left: 75%; animation-duration: 9s; }
+
+    .text-container {
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+    }
+
+    .charming-text {
+      position: absolute;
+      font-size: 18px;
+      font-family: 'Cursive', sans-serif;
+      color: #d63384;
+      animation: fadeInText 6s ease-in-out infinite;
+      z-index: 1;
+      padding: 10px 20px;
+      border-radius: 25px;
+      background-color: rgba(255, 255, 255, 0.7);
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      max-width: 80vw;
+      word-wrap: break-word;
+    }
+
+    .charming-text:nth-child(1) { top: 15%; left: 5%; text-align: left; animation-duration: 6s; }
+    .charming-text:nth-child(2) { top: 25%; left: 5%; text-align: left; animation-duration: 7s; }
+    .charming-text:nth-child(3) { top: 35%; left: 5%; text-align: left; animation-duration: 8s; }
+    .charming-text:nth-child(4) { top: 15%; right: 5%; text-align: right; animation-duration: 6s; }
+    .charming-text:nth-child(5) { top: 25%; right: 5%; text-align: right; animation-duration: 7s; }
+    .charming-text:nth-child(6) { top: 35%; right: 5%; text-align: right; animation-duration: 8s; }
+
+    @keyframes fadeInText {
+      0% { opacity: 0; }
+      50% { opacity: 0.5; transform: scale(1.2); }
+      100% { opacity: 1; transform: scale(1); }
+    }
+
+    .flowers {
+      position: absolute;
+      bottom: 10px;
+      animation: flowerAnimation 5s ease-in-out infinite;
+      font-size: 30px;
+    }
+
+    @keyframes flowerAnimation {
+      0% { transform: translateY(0); opacity: 0; }
+      50% { transform: translateY(-50px); opacity: 1; }
+      100% { transform: translateY(0); opacity: 0; }
+    }
+
+    .flowers:nth-child(1) { left: 10%; animation-duration: 6s; }
+    .flowers:nth-child(2) { left: 30%; animation-duration: 7s; }
+    .flowers:nth-child(3) { left: 50%; animation-duration: 8s; }
+    .flowers:nth-child(4) { left: 70%; animation-duration: 9s; }
+    .flowers:nth-child(5) { left: 90%; animation-duration: 10s; }
+
     .bubbles {
+      position: absolute;
+      bottom: 10px;
+      font-size: 25px;
+      color: #ff99b6;
+      animation: bubbleAnimation 7s ease-in-out infinite;
+    }
+
+    @keyframes bubbleAnimation {
+      0% { transform: translateY(0) scale(1); opacity: 0.8; }
+      50% { transform: translateY(-100px) scale(1.3); opacity: 0.4; }
+      100% { transform: translateY(0) scale(1); opacity: 0.8; }
+    }
+
+    .bubbles:nth-child(1) { left: 10%; animation-duration: 8s; }
+    .bubbles:nth-child(2) { left: 30%; animation-duration: 9s; }
+    .bubbles:nth-child(3) { left: 50%; animation-duration: 10s; }
+    .bubbles:nth-child(4) { left: 70%; animation-duration: 11s; }
+    .bubbles:nth-child(5) { left: 90%; animation-duration: 12s; }
+
+    #bubbles-text {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      overflow: hidden;
+      z-index: 1;
+    }
+
+    .text-bubble {
+      position: absolute;
+      font-size: 18px;
+      font-family: 'Cursive', sans-serif;
+      color: #d63384;
+      background-color: rgba(255, 255, 255, 0.7);
+      padding: 10px 20px;
+      border-radius: 25px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      animation: floatText 8s ease-in-out forwards;
+      white-space: nowrap;
+    }
+
+    @keyframes floatText {
+      0% { opacity: 0; transform: scale(0.5) translateY(0px); }
+      50% { opacity: 1; transform: scale(1.2) translateY(-50px); }
+      100% { opacity: 0; transform: scale(1) translateY(-100px); }
+    }
+
+    @media (max-width: 768px) {
+      body {
+        background-size: 100% 100%;
+        background-position: center top;
+      }
+
+      .message { font-size: 24px; padding: 20px; }
+      .charming-text, .text-bubble { font-size: 16px; padding: 8px 16px; }
+      .flowers { font-size: 25px; }
+      .bubbles { font-size: 20px; }
+    }
+
+    @media (max-width: 480px) {
+      .message { font-size: 20px; padding: 15px; }
+      .charming-text, .text-bubble { font-size: 14px; }
+      .flowers, .bubbles { font-size: 18px; }
+    }
+
+    #rotate-notice {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 9999;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(255, 240, 245, 0.95);
+      color: black;
+      font-size: 13px;
+      font-weight: bold;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 20px;
+      border: 4px dashed #ff69b4;
+      box-shadow: 0 0 20px #ffb6c1;
+      border-radius: 25px;
+      text-shadow: 1px 1px #ffc0cb;
+    }
+
+    @media screen and (orientation: portrait) {
+      #rotate-notice {
+        display: flex;
+      }
+
+      body > *:not(#rotate-notice) {
+        display: none !important;
+      }
+    }
+
+    @media screen and (orientation: landscape) {
+      #rotate-notice {
+        display: none;
+      }
+
+      body > * {
         display: block;
+      }
+
+      .message,
+      #bubbles-text,
+      .text-container,
+      .hearts,
+      .flowers,
+      .bubbles {
+        display: block;
+      }
     }
-}
+  </style>
+</head>
+<body>
+  <div id="rotate-notice">🔄 Xoay Ngang Màn Hình 🔄</div>
 
-        </style>
-    </head>
-    <body>
-    <div id="rotate-notice">
-  🔄 Xoay Ngang Màn Hình 🔄
-</div>
+  <div class="message">❤️ DT Nghĩa ❤️</div>
+  <div id="bubbles-text"></div>
 
-        <div class="message">❤️ DT Nghĩa ❤️</div>
-        <div id="bubbles-text"></div>
-        <script src="script.js"></script>
-        <script>
-            // Lista de mensajes románticos que aparecerán en burbujas
-const messages = [
-  "I Love You T.Nghia 💛",
-  "👻 Đàm Trọng Nghĩa 👻",
-  "love to Dam Trong Nghia 💕",
-  "Vui Vẻ Mỗi Ngày 🥰",
-  "Cố Gắng Vì Đam Mê 💖",
-  "Thế Giới Rộng Lớn 💫",
-  "Tự Hào Về Chính Mình 😍",
-  "Bạn Là Duy Nhất ✨",
-  "Ai Cũng Phải Trưởng Thành 💭",
-  "Giá Đình - Đam Mê là Trên Hết 💘"
-];
+  <script>
+    const messages = [
+      "I Love You T.Nghia 💛",
+      "👻 Đàm Trọng Nghĩa 👻",
+      "love to Dam Trong Nghia 💕",
+      "Vui Vẻ Mỗi Ngày 🥰",
+      "Cố Gắng Vì Đam Mê 💖",
+      "Thế Giới Rộng Lớn 💫",
+      "Tự Hào Về Chính Mình 😍",
+      "Bạn Là Duy Nhất ✨",
+      "Ai Cũng Phải Trưởng Thành 💭",
+      "Gia Đình - Đam Mê là Trên Hết 💘"
+    ];
 
-// Función que crea una burbuja de texto con un mensaje aleatorio
-function createTextBubble() {
-  // Creamos un nuevo elemento <div>
-  const bubble = document.createElement("div");
+    function createTextBubble() {
+      const bubble = document.createElement("div");
+      bubble.className = "text-bubble";
+      bubble.innerText = messages[Math.floor(Math.random() * messages.length)];
 
-  // Le asignamos la clase CSS "text-bubble" (debes definirla en tu CSS)
-  bubble.className = "text-bubble";
+      const left = Math.random() * 80 + 10;
+      const top = Math.random() * 80 + 10;
 
-  // Seleccionamos un mensaje aleatorio del arreglo
-  bubble.innerText = messages[Math.floor(Math.random() * messages.length)];
+      bubble.style.left = left + "vw";
+      bubble.style.top = top + "vh";
 
-  // Calculamos una posición aleatoria dentro de la pantalla (entre 10% y 90%)
-  const left = Math.random() * 80 + 10;
-  const top = Math.random() * 80 + 10;
+      const container = document.getElementById("bubbles-text");
+      container.appendChild(bubble);
 
-  // Establecemos la posición absoluta y aplicamos las coordenadas calculadas
-  bubble.style.position = "absolute";
-  bubble.style.left = left + "vw"; // vw = porcentaje del ancho de la ventana
-  bubble.style.top = top + "vh";   // vh = porcentaje del alto de la ventana
+      setTimeout(() => {
+        const rect = bubble.getBoundingClientRect();
 
-  // Buscamos el contenedor con ID "bubbles-text" y añadimos la burbuja
-  const container = document.getElementById("bubbles-text");
-  container.appendChild(bubble);
+        if (rect.right > window.innerWidth) {
+          bubble.style.left = `${window.innerWidth - rect.width - 10}px`;
+        }
+        if (rect.bottom > window.innerHeight) {
+          bubble.style.top = `${window.innerHeight - rect.height - 10}px`;
+        }
+        if (rect.left < 0) {
+          bubble.style.left = "10px";
+        }
+        if (rect.top < 0) {
+          bubble.style.top = "10px";
+        }
+      }, 10);
 
-  // Esperamos un momento (10ms) para asegurarnos de que se renderizó
-  setTimeout(() => {
-    const rect = bubble.getBoundingClientRect(); // Obtenemos las coordenadas reales del div
-
-    // Si la burbuja se sale por la derecha, la ajustamos hacia la izquierda
-    if (rect.right > window.innerWidth) {
-      const newLeft = window.innerWidth - rect.width - 10;
-      bubble.style.left = `${newLeft}px`;
-    }
-
-    // Si la burbuja se sale por la parte inferior, la subimos
-    if (rect.bottom > window.innerHeight) {
-      const newTop = window.innerHeight - rect.height - 10;
-      bubble.style.top = `${newTop}px`;
-    }
-
-    // Si se va muy a la izquierda, la traemos hacia adentro
-    if (rect.left < 0) {
-      bubble.style.left = "10px";
+      setTimeout(() => {
+        bubble.remove();
+      }, 8000);
     }
 
-    // Si se va muy arriba, la bajamos un poco
-    if (rect.top < 0) {
-      bubble.style.top = "10px";
-    }
-  }, 10);
-
-  // Eliminamos la burbuja automáticamente después de 8 segundos
-  setTimeout(() => {
-    bubble.remove();
-  }, 8000);
-}
-
-// Llamamos a la función createTextBubble cada 500 milisegundos (0.5 segundos)
-setInterval(createTextBubble, 500);
-
-
-@media (max-width: 480px) {
-  .message { font-size: 20px; padding: 15px; }
-  .charming-text, .text-bubble { font-size: 14px; }
-  .flowers, .bubbles { font-size: 18px; }
-}
-
-@media (min-width: 481px) and (max-width: 1024px) {
-  .message { font-size: 24px; }
-  .charming-text, .text-bubble { font-size: 16px; }
-}
-        </script>
-    </body>
-
-     <!-- 
-
-Contáctame:
-
-    * Invitame un café
- https://buymeacoffee.com/alexx.dev
-
-    * Portafolio Web
- https://alexxdev.vercel.app
-
-    * Sigueme en tiktok
- https://www.tiktok.com/@alexx.dev?is_from_webapp=1&sender_device=pc 
- 
-    *Canal de WhatsApp
- https://whatsapp.com/channel/0029VazQEXq90x2vIdNkrH1p
-
--->
- 
-    </html>
+    setInterval(createTextBubble, 500);
+  </script>
+</body>
+</html>
