--- a/index.html
+++ b/index.html
@@ -10,32 +10,48 @@
       box-sizing: border-box;
     }
 
-    .message,
-    .text-bubble {
-      max-width: 90vw;
-      word-wrap: break-word;
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
     }
 
-    body {
+    body.landscape {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
       background: url('https://img.freepik.com/vector-gratis/tema-san-valentin-corazones-cielo-rosa_1308-38030.jpg?semt=ais_hybrid&w=740') no-repeat center center;
       background-size: cover;
       background-attachment: fixed;
       font-family: 'Arial', sans-serif;
       text-align: center;
-      overflow: hidden;
       position: relative;
     }
 
-    @keyframes gradientAnimation {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+    body.portrait {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #000;
+      color: white;
+      font-size: 24px;
+      text-align: center;
+      font-family: sans-serif;
+    }
+
+    #rotate-notice {
+      display: none;
+    }
+
+    body.portrait #rotate-notice {
+      display: block;
+    }
+
+    body.portrait .message,
+    body.portrait #bubbles-text {
+      display: none;
     }
 
     .message {
@@ -49,6 +65,8 @@
       margin-bottom: 25px;
       transition: transform 0.3s ease;
       animation: bounce 1s infinite;
+      max-width: 90vw;
+      word-wrap: break-word;
     }
 
     @keyframes bounce {
@@ -60,106 +78,13 @@
       transform: scale(1.1);
     }
 
-    .hearts {
-      position: absolute;
-      top: 20%;
-      left: 10%;
-      z-index: -1;
-      font-size: 50px;
-      color: #ff99b6;
-      animation: floatHearts 5s ease-in-out infinite;
-    }
-
-    @keyframes floatHearts {
-      0% { transform: translateY(0) scale(1); opacity: 1; }
-      50% { transform: translateY(-150px) scale(1.5); opacity: 0.5; }
-      100% { transform: translateY(0) scale(1); opacity: 1; }
-    }
-
-    .hearts:nth-child(2) { left: 25%; animation-duration: 6s; }
-    .hearts:nth-child(3) { left: 40%; animation-duration: 7s; }
-    .hearts:nth-child(4) { left: 60%; animation-duration: 8s; }
-    .hearts:nth-child(5) { left: 75%; animation-duration: 9s; }
-
-    .text-container {
-      position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-    }
-
-    .charming-text {
-      position: absolute;
-      font-size: 18px;
-      font-family: 'Cursive', sans-serif;
-      color: #d63384;
-      animation: fadeInText 6s ease-in-out infinite;
-      z-index: 1;
-      padding: 10px 20px;
-      border-radius: 25px;
-      background-color: rgba(255, 255, 255, 0.7);
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      max-width: 80vw;
-      word-wrap: break-word;
-    }
-
-    .charming-text:nth-child(1) { top: 15%; left: 5%; text-align: left; animation-duration: 6s; }
-    .charming-text:nth-child(2) { top: 25%; left: 5%; text-align: left; animation-duration: 7s; }
-    .charming-text:nth-child(3) { top: 35%; left: 5%; text-align: left; animation-duration: 8s; }
-    .charming-text:nth-child(4) { top: 15%; right: 5%; text-align: right; animation-duration: 6s; }
-    .charming-text:nth-child(5) { top: 25%; right: 5%; text-align: right; animation-duration: 7s; }
-    .charming-text:nth-child(6) { top: 35%; right: 5%; text-align: right; animation-duration: 8s; }
-
-    @keyframes fadeInText {
-      0% { opacity: 0; }
-      50% { opacity: 0.5; transform: scale(1.2); }
-      100% { opacity: 1; transform: scale(1); }
-    }
-
-    .flowers {
-      position: absolute;
-      bottom: 10px;
-      animation: flowerAnimation 5s ease-in-out infinite;
-      font-size: 30px;
-    }
-
-    @keyframes flowerAnimation {
-      0% { transform: translateY(0); opacity: 0; }
-      50% { transform: translateY(-50px); opacity: 1; }
-      100% { transform: translateY(0); opacity: 0; }
-    }
-
-    .flowers:nth-child(1) { left: 10%; animation-duration: 6s; }
-    .flowers:nth-child(2) { left: 30%; animation-duration: 7s; }
-    .flowers:nth-child(3) { left: 50%; animation-duration: 8s; }
-    .flowers:nth-child(4) { left: 70%; animation-duration: 9s; }
-    .flowers:nth-child(5) { left: 90%; animation-duration: 10s; }
-
-    .bubbles {
-      position: absolute;
-      bottom: 10px;
-      font-size: 25px;
-      color: #ff99b6;
-      animation: bubbleAnimation 7s ease-in-out infinite;
-    }
-
-    @keyframes bubbleAnimation {
-      0% { transform: translateY(0) scale(1); opacity: 0.8; }
-      50% { transform: translateY(-100px) scale(1.3); opacity: 0.4; }
-      100% { transform: translateY(0) scale(1); opacity: 0.8; }
-    }
-
-    .bubbles:nth-child(1) { left: 10%; animation-duration: 8s; }
-    .bubbles:nth-child(2) { left: 30%; animation-duration: 9s; }
-    .bubbles:nth-child(3) { left: 50%; animation-duration: 10s; }
-    .bubbles:nth-child(4) { left: 70%; animation-duration: 11s; }
-    .bubbles:nth-child(5) { left: 90%; animation-duration: 12s; }
-
     #bubbles-text {
       position: absolute;
       width: 100%;
       height: 100%;
       pointer-events: none;
       overflow: hidden;
-      z-index: 1;
+      z-index: 10;
     }
 
     .text-bubble {
@@ -180,86 +105,10 @@
       50% { opacity: 1; transform: scale(1.2) translateY(-50px); }
       100% { opacity: 0; transform: scale(1) translateY(-100px); }
     }
-
-    @media (max-width: 768px) {
-      body {
-        background-size: 100% 100%;
-        background-position: center top;
-      }
-
-      .message { font-size: 24px; padding: 20px; }
-      .charming-text, .text-bubble { font-size: 16px; padding: 8px 16px; }
-      .flowers { font-size: 25px; }
-      .bubbles { font-size: 20px; }
-    }
-
-    @media (max-width: 480px) {
-      .message { font-size: 20px; padding: 15px; }
-      .charming-text, .text-bubble { font-size: 14px; }
-      .flowers, .bubbles { font-size: 18px; }
-    }
-
-    #rotate-notice {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 9999;
-      width: 100vw;
-      height: 100vh;
-      background-color: rgba(255, 240, 245, 0.95);
-      color: black;
-      font-size: 13px;
-      font-weight: bold;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 20px;
-      border: 4px dashed #ff69b4;
-      box-shadow: 0 0 20px #ffb6c1;
-      border-radius: 25px;
-      text-shadow: 1px 1px #ffc0cb;
-    }
-
-    @media screen and (orientation: portrait) {
-      #rotate-notice {
-        display: flex;
-      }
-
-      body > *:not(#rotate-notice) {
-        display: none !important;
-      }
-    }
-
-    @media screen and (orientation: landscape) {
-      #rotate-notice {
-        display: none;
-      }
-
-      body > * {
-        display: block;
-      }
-
-      .message,
-      #bubbles-text,
-      .text-container,
-      .hearts,
-      .flowers,
-      .bubbles {
-        display: block;
-      }
-    }
   </style>
 </head>
 <body>
   <div id="rotate-notice">🔄 Xoay Ngang Màn Hình 🔄</div>
-
-  <div class="message">❤️ DT Nghĩa ❤️</div>
-  <div id="bubbles-text"></div>
-
-  <script>
-    <body>
   <div class="message">❤️ DT Nghĩa ❤️</div>
   <div id="bubbles-text"></div>
 
@@ -312,7 +161,25 @@
       }, 8000);
     }
 
-    setInterval(createTextBubble, 500);
+    let bubbleInterval;
+
+    function handleOrientation() {
+      const isPortrait = window.innerHeight > window.innerWidth;
+      document.body.className = isPortrait ? 'portrait' : 'landscape';
+
+      if (!isPortrait) {
+        if (!bubbleInterval) {
+          bubbleInterval = setInterval(createTextBubble, 500);
+        }
+      } else {
+        clearInterval(bubbleInterval);
+        bubbleInterval = null;
+      }
+    }
+
+    window.addEventListener("resize", handleOrientation);
+    window.addEventListener("orientationchange", handleOrientation);
+    window.addEventListener("load", handleOrientation);
   </script>
 </body>
 </html>
